# basic_todolist

./: CMakeLists.txt  Makefile  Task.cpp  Task.hpp  Todo.cpp  Todo.hpp  Todolist  Todolist.cpp  Todolist.hpp  header.hpp  main.cpp  task.json  utils.cpp
